--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,16 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
-.snakemake*
 .ipynb_checkpoints
+*.ipynb
+.idea
 __pycache__
 *dconf
 gurobi.log
 .vscode
-
-/bak
-/resources
-/results
-/networks
-/benchmarks
-/logs
-/notebooks
+*.nc
 /data
-/data/links_p_nom.csv
-/cutouts
-/dask-worker-space
-
 doc/_build
-
 config.yaml
-
 dconf
+/models
