--- a/envs/environment.yaml
+++ b/envs/environment.yaml
@@ -39,6 +39,9 @@ dependencies:
   - proj
   - fiona <= 1.18.20  # Till issue https://github.com/Toblerity/Fiona/issues/1085 is not solved
   - country_converter
+  - ipopt
+  - glpk
+  - jupyter
 
   # Keep in conda environment when calling ipython
   - ipython
