Use older ipopt version
Versions of ipopt newer than 3.11 lead to issues where Python can't find the executable to solve, breaking the cluster_network.py

--- a/envs/environment.yaml
+++ b/envs/environment.yaml
@@ -39,7 +39,7 @@ dependencies:
   - proj
   - fiona <= 1.18.20  # Till issue https://github.com/Toblerity/Fiona/issues/1085 is not solved
   - country_converter
-  - ipopt
+  - ipopt <= 3.11.1 # More recent versions can return issues with finding the solver executable
   - glpk
   - jupyter
 
